--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsdom-global": "2.1.0",
     "mapbox-gl-styles": "2.0.2",
     "mocha": "3.1.0",
+    "openlayers": "3.18.2",
     "standalonify": "0.1.3"
   }
 }
