--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ol-mapbox-gl-style",
-  "version": "0.0.7",
+  "name": "ol-mapbox-style",
+  "version": "0.0.8",
   "description": "Use Mapbox GL style objects with OpenLayers",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/boundlessgeo/ol-mapbox-gl-style.git"
+    "url": "git://github.com/boundlessgeo/ol-mapbox-style.git"
   },
   "bugs": {
-    "url": "https://github.com/boundlessgeo/ol-mapbox-gl-style/issues"
+    "url": "https://github.com/boundlessgeo/ol-mapbox-style/issues"
   },
   "keywords": [
     "openlayers",
