--- a/package.json
+++ b/package.json
@@ -26,28 +26,28 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "dist": "mkdir -p dist && browserify -p [ standalonify --name olms --deps [ null --openlayers ol ] ] index.js > dist/olms.js",
-    "doc": "documentation build index.js -f md",
+    "doc": "documentation readme -s API index.js",
     "pretest": "eslint src",
     "test": "mocha"
   },
   "dependencies": {
-    "color-string": "1.2.0",
-    "fontfaceobserver": "2.0.4",
-    "mapbox-gl-function": "1.2.1",
+    "color-string": "1.4.0",
+    "fontfaceobserver": "2.0.7",
+    "mapbox-gl-function": "1.3.0",
     "mapbox-to-css-font": "1.0.2"
   },
   "devDependencies": {
-    "browserify": "13.1.0",
+    "browserify": "13.1.1",
     "cssify": "1.0.3",
-    "documentation": "4.0.0-beta10",
-    "eslint": "3.6.1",
-    "eslint-config-openlayers": "5.0.0",
+    "documentation": "4.0.0-beta16",
+    "eslint": "3.12.1",
+    "eslint-config-openlayers": "6.0.0",
     "expect.js": "0.3.1",
-    "jsdom": "9.5.0",
+    "jsdom": "9.8.3",
     "jsdom-global": "2.1.0",
     "mapbox-gl-styles": "2.0.2",
-    "mocha": "3.1.0",
-    "openlayers": "3.18.2",
+    "mocha": "3.2.0",
+    "openlayers": "3.20.0",
     "standalonify": "0.1.3"
   }
 }
