--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   "dependencies": {
     "color-string": "1.4.0",
     "fontfaceobserver": "2.0.7",
-    "mapbox-gl-function": "1.3.0",
+    "mapbox-gl-style-spec": "8.11.0",
     "mapbox-to-css-font": "1.0.2"
   },
   "devDependencies": {
     "browserify": "13.3.0",
     "cssify": "1.0.3",
-    "documentation": "4.0.0-beta18",
+    "documentation": "4.0.0-beta.18",
     "eslint": "3.13.1",
     "eslint-config-openlayers": "6.0.0",
     "expect.js": "0.3.1",
