Add Attila Berényi as contributor

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   ],
   "author": "Andreas Hocevar <andreas.hocevar@gmail.com>",
   "contributors": [{
+    "name": "Attila Berényi",
+    "email": "aberenyi@gislab.hu"  
+  }, {
     "name": "Dan 'Ducky' Little",
     "email": "danlittle@yahoo.com"
   }, {
