Use ES2015 and the ol package

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
   "extends": "openlayers",
   "globals": {
     Promise: false
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": module
   }
 }
