--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "Use Mapbox style objects with OpenLayers",
   "main": "index.js",
   "repository": {
@@ -33,29 +33,28 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "prepublish": "mkdir -p dist && browserify -g [ babelify --plugins [ transform-es2015-modules-commonjs ] ] -p [ standalonify --name olms --deps [ null --ol/style/style ol.style.Style --ol/style/fill ol.style.Fill --ol/style/stroke ol.style.Stroke --ol/style/circle ol.style.Circle --ol/style/icon ol.style.Icon --ol/style/text ol.style.Text ] ] index.js > dist/olms.js",
-    "compile": "babel -d dist/ index.js",
     "doc": "documentation readme -s API index.js",
-    "pretest": "eslint src",
-    "test": "browserify test/test.js -g [ babelify --plugins [ transform-es2015-modules-commonjs ] ] > test/test-bundle.js && mocha test/test-bundle.js && rm test/test-bundle.js"
+    "pretest": "eslint src & npm run test-bundle",
+    "test": "mocha test/test-bundle.js",
+    "test-bundle": "browserify test/test.js -g [ babelify --plugins [ transform-es2015-modules-commonjs ] ] > test/test-bundle.js",
+    "posttest": "rm test/test-bundle.js"
   },
   "dependencies": {
-    "fontfaceobserver": "2.0.7",
-    "mapbox-gl-style-spec": "8.11.0",
-    "mapbox-to-css-font": "1.0.2"
+    "mapbox-to-css-font": "2.0.3",
+    "mapbox-to-ol-style": "1.2.0",
+    "webfontloader": "^1.6.27"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
     "cssify": "1.0.3",
     "documentation": "4.0.0-beta.18",
     "eslint": "3.13.1",
     "eslint-config-openlayers": "6.0.0",
-    "expect.js": "0.3.1",
     "jsdom": "9.9.1",
     "jsdom-global": "2.1.1",
     "mapbox-gl-styles": "2.0.2",
     "mocha": "3.2.0",
-    "ol": "3.21.0-beta.16",
+    "should": "^11.1.2",
     "standalonify": "0.1.3"
   }
 }
