--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Use Mapbox style objects with OpenLayers",
   "main": "index.js",
   "repository": {
@@ -40,6 +40,7 @@
     "posttest": "rm test/test-bundle.js"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-style-spec": "^8.11.0",
     "mapbox-to-css-font": "2.0.3",
     "mapbox-to-ol-style": "2.1.3",
     "ol": "^3.21.0-beta.17",
