--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ol-mapbox-style",
-  "version": "2.2.1",
-  "description": "Use Mapbox style objects with OpenLayers",
+  "version": "2.2.2",
+  "description": "Create OpenLayers maps from Mapbox Style objects",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -41,23 +41,23 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^8.11.0",
-    "mapbox-to-css-font": "2.0.3",
-    "mapbox-to-ol-style": "2.2.0",
-    "ol": "^3.21.0-beta.17",
+    "mapbox-to-css-font": "^2.0.3",
+    "mapbox-to-ol-style": "^2.2.1",
+    "ol": "^4.0.1-beta.2",
     "webfontloader": "^1.6.27"
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "browserify": "^14.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "browserify": "^14.1.0",
     "bubleify": "^0.7.0",
-    "documentation": "4.0.0-beta.18",
-    "eslint": "3.13.1",
-    "eslint-config-openlayers": "6.0.0",
-    "jsdom": "9.9.1",
-    "jsdom-global": "2.1.1",
-    "mapbox-gl-styles": "2.0.2",
-    "mocha": "3.2.0",
-    "should": "^11.1.2",
-    "standalonify": "0.1.3"
+    "documentation": "^4.0.0-beta.18",
+    "eslint": "3.18.0",
+    "eslint-config-openlayers": "^7.0.0",
+    "jsdom": "^9.12.0",
+    "jsdom-global": "^2.1.1",
+    "mapbox-gl-styles": "^2.0.2",
+    "mocha": "^3.2.0",
+    "should": "^11.2.1",
+    "standalonify": "^0.1.3"
   }
 }
