--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^9.0.0",
     "mapbox-to-css-font": "^2.0.3",
-    "mapbox-to-ol-style": "^3.1.7",
-    "ol": "^4.3.1",
+    "mapbox-to-ol-style": "^3.2.0-beta.1",
+    "ol": "^4.5.0-beta.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
