Add Torben Barsballe to contributors

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     {
       "name": "Adrien Pompée",
       "email": "adrien.pompee@atmosphere.aero"
+    },
+    {
+      "name": "Torben Barsballe",
+      "email": "tbarsballe@boundlessgeo.com"
     }
   ],
   "license": "BSD-2-Clause",
