--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "2.7.0-beta.2",
+  "version": "2.7.0",
   "description": "Create OpenLayers maps from Mapbox Style objects",
   "main": "index.js",
   "repository": {
@@ -50,8 +50,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^9.0.0",
     "mapbox-to-css-font": "^2.0.3",
-    "mapbox-to-ol-style": "^3.2.0-beta.2",
-    "ol": "^4.5.0-beta.1",
+    "mapbox-to-ol-style": "3.2.0",
+    "ol": "4.5.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
