--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^9.0.0",
-    "mapbox-to-css-font": "^2.0.3",
-    "mapbox-to-ol-style": "3.2.0",
+    "mapbox-to-css-font": "^2.1.0",
+    "mapbox-to-ol-style": "3.2.2",
     "ol": "4.5.0",
-    "webfontloader": "^1.6.28"
+    "webfont-matcher": "^1.1.0"
   },
   "devDependencies": {
     "babel-generator": "^6.26.0",
