--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,5 +1,12 @@
 {
   "env": {
     "mocha": true
+  },
+  "rules": {
+    "no-console": [
+      "error", {
+        "allow": ["error"]
+      }
+    ]
   }
 }
