--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "prepublish": "npm run doc",
     "build": "webpack-cli --config ./webpack.config.olms.js",
     "doc": "documentation readme -s API index.js",
-    "lint": "eslint __test__ index.js webpack.config.js",
+    "lint": "eslint __test__ *.js",
     "pretest": "npm run lint",
     "test": "jest",
     "cover": "jest --coverage"
