Move examples to ES6
Use ES6 for the examples, this removes the need to build any
single-file bundle.

Migrates to HTML templates.

Remove duplicate webpack conf.

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js",
     "prepublish": "npm run doc",
-    "build": "webpack-cli --config ./webpack.config.olms.js",
+    "build": "webpack-cli --config ./webpack.config.js",
     "doc": "documentation readme -s API index.js",
     "lint": "eslint __test__ *.js",
     "pretest": "npm run lint",
@@ -84,10 +84,12 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "canvas": "^1.6.8",
+    "copy-webpack-plugin": "^4.5.1",
     "deep-freeze": "0.0.1",
     "documentation": "^4.0.0-rc.1",
     "eslint": "^4.10.0",
     "eslint-config-openlayers": "^7.0.0",
+    "html-webpack-plugin": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
     "jest-cli": "^21.2.1",
