--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "cover": "jest --coverage"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-style-spec": "^9.0.1",
+    "@mapbox/mapbox-gl-style-spec": "^12.0.0",
     "mapbox-to-css-font": "^2.1.0",
     "webfont-matcher": "^1.1.0"
   },
@@ -80,8 +80,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^23.0.0-alpha.0",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "canvas": "^1.6.8",
     "copy-webpack-plugin": "^4.5.1",
@@ -97,14 +98,14 @@
     "json5": "^0.5.1",
     "mapbox-gl-styles": "^2.0.2",
     "mkdirp": "^0.5.1",
-    "nock": "^9.2.3",
+    "nock": "^9.3.2",
     "ol": ">=5.0.0-beta.13 <5.0.0-c",
     "regenerator-runtime": "^0.11.1",
     "should": "^11.2.1",
     "should-approximately-deep": "^1.1.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.1"
   },
   "jest": {
@@ -112,7 +113,7 @@
       "<rootDir>/env-setup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(ol|mapbox-to-ol-style)/)"
+      "node_modules/(?!(ol|mapbox-to-ol-style|@mapbox\/mapbox-gl-style-spec)/)"
     ],
     "coveragePathIgnorePatterns": [
       "env-setup.js",
