--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
       "<rootDir>/env-setup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(ol|mapbox-to-ol-style|@mapbox\/mapbox-gl-style-spec)/)"
+      "node_modules/(?!(ol|mapbox-to-ol-style|@mapbox/mapbox-gl-style-spec)/)"
     ],
     "coveragePathIgnorePatterns": [
       "env-setup.js",
