--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "3.0.0-beta.9",
+  "version": "3.0.0",
   "description": "Create OpenLayers maps from Mapbox Style objects",
   "main": "index.js",
   "repository": {
@@ -71,11 +71,11 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^12.0.0",
-    "mapbox-to-css-font": "^2.1.0",
+    "mapbox-to-css-font": "^2.2.0",
     "webfont-matcher": "^1.1.0"
   },
   "peerDependencies": {
-    "ol": ">=5.0.0-beta.13 <5.0.0-c"
+    "ol": "^5.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -99,7 +99,7 @@
     "mapbox-gl-styles": "^2.0.2",
     "mkdirp": "^0.5.1",
     "nock": "^9.3.2",
-    "ol": ">=5.0.0-beta.13 <5.0.0-c",
+    "ol": "^5.0.0",
     "regenerator-runtime": "^0.11.1",
     "should": "^11.2.1",
     "should-approximately-deep": "^1.1.0",
