--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "prepare": "npm run doc && npm run build",
     "build": "webpack-cli --config ./webpack.config.olms.js && webpack-cli",
     "doc": "documentation readme -s API index.js",
-    "lint": "eslint __test__ example *.js",
+    "lint": "eslint __tests__ example *.js",
     "pretest": "npm run lint",
     "test": "jest",
     "cover": "jest --coverage"
@@ -81,30 +81,30 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "canvas": "^1.6.8",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
+    "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "^1.0.0",
     "deep-freeze": "0.0.1",
-    "documentation": "^4.0.0-rc.1",
-    "eslint": "^4.10.0",
+    "documentation": "^8.1.2",
+    "eslint": "^5.7.0",
     "eslint-config-openlayers": "^7.0.0",
     "html-webpack-plugin": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^20.0.4",
-    "jest-cli": "^21.2.1",
-    "json5": "^0.5.1",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "json5": "^2.1.0",
     "mapbox-gl-styles": "^2.0.2",
     "mkdirp": "^0.5.1",
-    "nock": "^9.3.2",
+    "nock": "^10.0.1",
     "ol": "^5.0.0",
-    "regenerator-runtime": "^0.11.1",
-    "should": "^11.2.1",
+    "regenerator-runtime": "^0.12.1",
+    "should": "^13.2.3",
     "should-approximately-deep": "^1.1.0",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.20.2",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.1"
   },
