--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "transform-flow-strip-types"
+    "transform-flow-strip-types",
+    "rewire"
   ],
   "presets": [
     "env"
