--- a/package.json
+++ b/package.json
@@ -76,23 +76,22 @@
     "webfont-matcher": "^1.1.0"
   },
   "peerDependencies": {
-    "ol": "^5.0.0"
+    "ol": "^5.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
     "canvas": "^1.6.8",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^1.0.0",
+    "babel-loader": "^8.0.4",
+    "@babel/preset-env": "^7.1.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
     "deep-freeze": "0.0.1",
     "documentation": "^8.1.2",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-openlayers": "^7.0.0",
-    "html-webpack-plugin": "^3.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
@@ -100,14 +99,14 @@
     "mapbox-gl-styles": "^2.0.2",
     "mkdirp": "^0.5.1",
     "nock": "^10.0.1",
-    "ol": "^5.0.0",
+    "ol": "^5.2.0",
     "regenerator-runtime": "^0.12.1",
     "should": "^13.2.3",
     "should-approximately-deep": "^1.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.21.0",
+    "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.10"
   },
   "jest": {
     "verbose": true,
@@ -115,7 +114,7 @@
       "<rootDir>/env-setup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(ol|mapbox-to-ol-style|@mapbox/mapbox-gl-style-spec)/)"
+      "node_modules/(?!(ol|@mapbox/mapbox-gl-style-spec)/)"
     ],
     "coveragePathIgnorePatterns": [
       "env-setup.js",
