--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js",
     "prepare": "npm run doc && npm run build",
-    "build": "webpack-cli --config ./webpack.config.olms.js && webpack-cli",
+    "build": "webpack-cli --mode=production --config ./webpack.config.olms.js && webpack-cli --mode=production",
     "doc": "documentation readme -s API index.js",
     "lint": "eslint __tests__ example *.js",
     "pretest": "npm run lint",
@@ -81,22 +81,23 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
-    "babel-jest": "^23.6.0",
-    "canvas": "^1.6.8",
-    "babel-loader": "^8.0.4",
     "@babel/preset-env": "^7.1.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "canvas": "^1.6.13",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "deep-freeze": "0.0.1",
     "documentation": "^8.1.2",
     "eslint": "^5.8.0",
-    "eslint-config-openlayers": "^7.0.0",
+    "eslint-config-openlayers": "^11.0.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "json5": "^2.1.0",
     "mapbox-gl-styles": "^2.0.2",
+    "mini-css-extract-plugin": "^0.4.4",
     "mkdirp": "^0.5.1",
     "nock": "^10.0.1",
     "ol": "^5.2.0",
@@ -106,7 +107,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-sources": "^1.0.1"
   },
   "jest": {
     "verbose": true,
