--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-rewire": "^1.2.0",
     "canvas": "^1.6.13",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
