--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "webfont-matcher": "^1.1.0"
   },
   "peerDependencies": {
-    "ol": "^5.3.0"
+    "ol": "^6.0.0-beta.6"
   },
   "devDependencies": {
     "babel-loader": "^8.0.5",
@@ -54,7 +54,7 @@
     "mapbox-gl-styles": "^2.0.2",
     "mini-css-extract-plugin": "^0.4.5",
     "mocha": "^5.2.0",
-    "ol": "^5.3.1",
+    "ol": "^6.0.0-beta.6",
     "puppeteer": "^1.12.2",
     "should": "^13.2.3",
     "sinon": "^7.2.3",
