--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "5.0.0-beta.3",
+  "version": "5.0.2",
   "description": "Create OpenLayers maps from Mapbox Style objects",
   "main": "index.js",
   "repository": {
