--- a/tsconfig-typecheck.json
+++ b/tsconfig-typecheck.json
@@ -3,6 +3,7 @@
     "noEmit": true,
     "allowJs": true,
     "checkJs": true,
+    "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
       "ol": ["node_modules/ol/src"],
@@ -10,7 +11,8 @@
     },
     "lib": [
       "es2015",
-      "dom"
+      "dom",
+      "webworker"
     ]
   },
   "include": [
