Make type checking work with ol

--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "mapbox-gl-styles": "^2.0.2",
     "mini-css-extract-plugin": "^0.4.5",
     "mocha": "^5.2.0",
-    "ol": "^6.1.1",
+    "ol": "^6.3.2-dev.1588274204842",
     "puppeteer": "^1.20.0",
     "should": "^13.2.3",
     "sinon": "^7.5.0",
     "style-loader": "^0.23.1",
-    "typescript": "3.5.3",
+    "typescript": "^3.8.3",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
