Update typescript to make type checking work with ol

--- a/tsconfig-typecheck.json
+++ b/tsconfig-typecheck.json
@@ -3,6 +3,8 @@
     "noEmit": true,
     "allowJs": true,
     "checkJs": true,
+    "target": "ES5",
+    "moduleResolution": "node",
     "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
@@ -17,6 +19,6 @@
   },
   "include": [
     "src/*.js",
-    "node_modules/ol/**/*.js"
+    "node_modules/ol/src/**/*.js"
   ]
 }
