Add back coverage reporting

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "buble": "^0.20.0",
     "buble-loader": "^0.5.1",
     "copy-webpack-plugin": "^6.0.3",
+    "coverage-istanbul-loader": "^3.0.5",
     "css-loader": "^6.5.1",
     "deep-freeze": "0.0.1",
     "documentation": "^13.2.5",
@@ -50,6 +51,7 @@
     "html-webpack-plugin": "^5.5.0",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-mocha": "^2.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^5.0.0",
