Also publish declaration source map

--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -7,6 +7,7 @@
     "allowJs": true,
     "importHelpers": false,
     "declaration": true,
+    "declarationMap": true
   },
   "include": [
     "./src/**/*.js"
