Set version to 8.0.0

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,10 @@
 .circleci/
 .git/
+.github/
+coverage/
 examples/
 test/
 .editorconfig
 .eslintrc
-webpack.*.js
-tsconfig.*.json
+webpack.*.cjs
+tsconfig*.json
