--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-mapbox-style",
-  "version": "8.0.0-beta.0",
+  "version": "8.0.0",
   "description": "Create OpenLayers maps from Mapbox Style objects",
   "type": "module",
   "main": "dist/olms.js",
