Add require field to exports

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/olms.js"
     }
   },
   "repository": {
