Update typedoc plugin to fix API docs

--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "should": "^13.2.3",
     "sinon": "^14.0.0",
     "style-loader": "^3.3.1",
-    "typedoc": "0.23.10",
-    "typedoc-plugin-markdown": "^3.11.14",
+    "typedoc": "^0.23.10",
+    "typedoc-plugin-markdown": "^3.13.4",
     "typedoc-plugin-missing-exports": "^0.23.0",
     "typescript": "^4.6.0-beta",
     "webpack": "^5.62.1",
